2017-10-02  Franz Holzinger <franz@ttproducts.de>
    * add the backwards compatible API under the name PaymentPreviousApi.php because only this supports PHP 5.3 and the former transactor classes

2017-09-30  Franz Holzinger <franz@ttproducts.de>
    * new namespace API and classes. This feature must be activated in the Extension Manager compatibility = 0

2017-09-30  Franz Holzinger <franz@ttproducts.de>
    * readd the file ext_autoload.php

2017-08-14 Franz Holzinger <franz@ttproducts.de>
    * replace TABs by 4 blanks
    * write TRUE, FALSE and NULL in lower case letters: true, false, null

2017-05-30 Franz Holzinger <franz@ttproducts.de>
    * bugfix: replace tx_div2007_alpha::getTypoLink_fh002 by tx_div2007_alpha5::getTypoLink_fh003

2017-05-10 Franz Holzinger <franz@ttproducts.de>
    * works with TYPO3 8.x
    * bugfix: replace getLL_fh002 by getLL_fh003
    * bugfix: a new orderuid must lead to an update of the transactor record
    * add a file composer.json
    * bugfix: change marker ###TRANSACTOR_IMAGE### to contain the full image html like
        <img src="typo3conf/ext/transactor_paypal/res/paypal_euro.gif" width="88" height="33" border="0" alt="" title="" />
    * bugfix: use $cObj->fileResource instead of tx_div2007::resolvePathWithExtPrefix for a path like EXT:transactor_paypal/res/paypal_euro.gif

2016-10-26 Franz Holzinger <franz@ttproducts.de>
	* remove the parameter handleLib from the PaymentApi because it must always be set to transactor
	* new feature: determine the payment costs. An addon to this extension can add the payment costs to the handling costs.

2016-06-13 Franz Holzinger <franz@ttproducts.de>
	* bugfix for PHP 7.x: The method init of tx_transactor_language cannot overload init of tx_div2007_alpha_language_base. init1 must be used instead.
	* add new class PaymentApi for TYPO3 7.x.

2016-05-02	Franz Holzinger <franz@ttproducts.de>
	* Bugfix: TYPO3 does not know any more the $_EXTKEY variable
