@@ -9,7 +9,7 @@ $EM_CONF[$_EXTKEY] = array(
     'description' => 'This is a basic API to develop extensions which connect to different payment transaction gateways.',
     'category' => 'misc',
     'shy' => 0,
-    'version' => '0.5.0',
+    'version' => '0.5.1',
     'dependencies' => 'div2007',
     'conflicts' => '',
     'priority' => '',
